<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.oliver.notepad.activity.AddSub">

    <item
        android:id="@+id/bar_favorito"
        android:icon="@drawable/ic_favorito_preto"
        android:title="@string/favoritos"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/bar_bloquear"
        android:icon="@drawable/ic_lock_open"
        android:title="@string/senha"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/bar_cor"
        android:icon="@drawable/ic_color"
        android:title="@string/cor"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/bar_pasta"
        android:icon="@drawable/ic_mudar_pasta"
        android:title="@string/moverPasta"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/bar_pdf"
        android:icon="@drawable/ic_exportar_pdf"
        android:title="@string/exportarPdf"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/bar_txt"
        android:icon="@drawable/ic_text"
        android:title="@string/exportarWord"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/bar_compartilhar"
        android:icon="@drawable/ic_share"
        android:title="@string/compartilhar"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/bar_excluir"
        android:icon="@drawable/ic_delete_preto"
        android:title="@string/moverParaLixeira"
        app:showAsAction="ifRoom" />


</menu>